--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -27,15 +28,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "androidx.room:room-runtime:2.2.0"
+    implementation 'androidx.room:room-runtime:2.2.1'
+    kapt "android.arch.persistence.room:compiler:2.2.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor "androidx.room:room-compiler:2.2.0"
+    annotationProcessor 'androidx.room:room-compiler:2.2.1'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.biometric:biometric:1.0.0-rc01'
+    implementation 'androidx.biometric:biometric:1.0.0'
     api 'com.github.ittianyu:BottomNavigationViewEx:2.0.2'
     implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.3.0'
 
